Fixes tree test so that it compiles with no host or kernel errors

--- a/opencl/tests/tree_tests/Makefile
+++ b/opencl/tests/tree_tests/Makefile
@@ -1,6 +1,6 @@
 PROJ=tree_cl_test 
 CC=gcc
-CFLAGS=-std=c99 -Wall
+CFLAGS=-std=c99 -Wall -g
 LIB=-lOpenCL
 
 ifdef AMDAPPSDKROOT
@@ -23,14 +23,14 @@ LIB_PARAMS=$(LIB_DIRS:%=-L%)
 
 all: $(PROJ)
 
-$(PROJ): tree_cl_test_main.o tree_cl_test.o cl_host_tools.o
+$(PROJ): tree_cl_test_main.o tree_cl_test.o cl_host_tools.o 
 	$(CC) -o $@ $^ $(INC_PARAMS) $(LIB_PARAMS) $(LIB)
-tree_cl_test_main.o:
-	$(CC) $(CFLAGS) -c -o $@ tree_cl_test_main.c $(INC_PARAMS) 
-tree_cl_test.o: 
-	$(CC) $(CFLAGS) -c -o $@ tree_cl_test.c $(INC_PARAMS) 
-cl_host_tools.o:
-	$(CC) $(CFLAGS) -c -o $@ ../../src/cl_host_tools.c $(INC_PARAMS) 
+tree_cl_test_main.o: tree_cl_test_main.c
+	$(CC) $(CFLAGS) -c -o $@ $^ $(INC_PARAMS) 
+tree_cl_test.o: tree_cl_test.c
+	$(CC) $(CFLAGS) -c -o $@ $^ $(INC_PARAMS) 
+cl_host_tools.o: ../../src/cl_host_tools.c
+	$(CC) $(CFLAGS) -c -o $@ $^ $(INC_PARAMS) 
 clean:
 	rm -f $(PROJ) 
 	rm -f *.o
