--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include src/integrator_whfasthelio.c
 include src/integrator_leapfrog.c
 include src/integrator_sei.c
 include src/integrator_hermes.c
+include src/integrator_mercurius.c
 include src/integrator_janus.c
 include src/integrator.c
 include src/gravity.c
@@ -23,6 +24,7 @@ include src/integrator_whfasthelio.h
 include src/integrator_leapfrog.h
 include src/integrator_sei.h
 include src/integrator_hermes.h
+include src/integrator_mercurius.h
 include src/integrator_janus.h
 include src/integrator.h
 include src/collision.h
