--- a/src/Makefile.defs
+++ b/src/Makefile.defs
@@ -1,4 +1,4 @@
-OPT+= -fsanitize=bounds -fsanitize=address -std=c99 -Wpointer-arith -D_GNU_SOURCE -O3 
+OPT+= -std=c99 -Wpointer-arith -D_GNU_SOURCE -O3 
 # Removed -march=native for now
 ifndef OS
 	OS=$(shell uname)
