Add HDF5 output option. The structure of HDF5 file is similar to that of Gadget2, so hopefully tools that can be used to analyze gadget outputs can easily adapted to process rebound outputs.

--- a/src/Makefile.defs
+++ b/src/Makefile.defs
@@ -59,3 +59,8 @@ ifndef GITHASH
 	GITHASH = $(shell git rev-parse HEAD || echo '0000000000gitnotfound0000000000000000000')
 	PREDEF+= -DGITHASH=$(GITHASH)
 endif
+
+ifeq ($(HDF5), 1)
+	PREDEF+= -DHDF5
+	LIB+= -lhdf5
+endif
